[gd_scene load_steps=45 format=2]

[ext_resource path="res://Parallax/Asset/Player/cyber prisoner death-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Parallax/Asset/Player/cyber prisoner hurt-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Parallax/Asset/Player/cyber prisoner idle-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Parallax/Asset/Player/cyber prisoner run cycle-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Parallax/script/Player.gd" type="Script" id=5]
[ext_resource path="res://Parallax/Asset/Background/Shadow.png" type="Texture" id=6]
[ext_resource path="res://Parallax/Asset/Player/cyber prisoner Light attack slash-Sheet.png" type="Texture" id=7]
[ext_resource path="res://Audio/SFX/Punch.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "Attack",
"speed": 7.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Damaged",
"speed": 7.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Running",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 960, 450 )
script = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -0.641, 45.032 )
scale = Vector2( 1.818, 0.588 )
texture = ExtResource( 6 )

[node name="Player_col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Player_anim" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 6 )
animation = "Idle"
speed_scale = 2.0
playing = true

[node name="Punch1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 1.0

[node name="Punch2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 1.0

[connection signal="animation_finished" from="Player_anim" to="." method="_on_Player_anim_animation_finished"]
